refactor: change db structure for queries
