# docs/swagger.json
@@ -10,7 +10,7 @@
     "paths": {
         "/barangays": {
             "get": {
-                "description": "get barangays",
+                "description": "get Barangays",
                 "consumes": [
                     "application/json"
                 ],
@@ -18,27 +18,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "barangays"
+                    "Barangays"
                 ],
                 "summary": "Show list of Barangays",
                 "parameters": [
                     {
                         "type": "string",
                         "example": "filter",
-                        "description": "This is filter for all the field in the object GeographicArea",
+                        "description": "This is filter for all the field in the  object",
                         "name": "filter",
                         "in": "query"
                     },
                     {
+                        "minimum": 0,
                         "type": "integer",
                         "example": 1,
                         "name": "page",
                         "in": "query"
                     },
                     {
+                        "maximum": 1000,
                         "type": "integer",
                         "example": 1000,
-                        "name": "perPage",
+                        "name": "per_page",
                         "in": "query"
                     }
                 ],
@@ -46,7 +48,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/PaginatedResponse"
+                            "$ref": "#/definitions/PaginatedBarangay"
                         }
                     },
                     "400": {
@@ -64,7 +66,7 @@
                 }
             }
         },
-        "/barangays/{psgcCode}": {
+        "/barangays/{psgc_code}": {
             "get": {
                 "description": "get string by PsgcCode",
                 "consumes": [
@@ -76,12 +78,12 @@
                 "tags": [
                     "barangays"
                 ],
-                "summary": "Show a barangay",
+                "summary": "Show a Barangay",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Barangay psgcCode",
-                        "name": "psgcCode",
+                        "name": "psgc_code",
                         "in": "path",
                         "required": true
                     }
@@ -90,7 +92,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Masterlist"
+                            "$ref": "#/definitions/Barangay"
                         }
                     },
                     "400": {
@@ -108,9 +110,9 @@
                 }
             }
         },
-        "/cities": {
+        "/citi_muni": {
             "get": {
-                "description": "get cities",
+                "description": "get Cities/Municipalities",
                 "consumes": [
                     "application/json"
                 ],
@@ -118,27 +120,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "cities"
+                    "Cities/Municipalities"
                 ],
-                "summary": "Show list of cities",
+                "summary": "Show list of Cities/Municipalities",
                 "parameters": [
                     {
                         "type": "string",
                         "example": "filter",
-                        "description": "This is filter for all the field in the object GeographicArea",
+                        "description": "This is filter for all the field in the  object",
                         "name": "filter",
                         "in": "query"
                     },
                     {
+                        "minimum": 0,
                         "type": "integer",
                         "example": 1,
                         "name": "page",
                         "in": "query"
                     },
                     {
+                        "maximum": 1000,
                         "type": "integer",
                         "example": 1000,
-                        "name": "perPage",
+                        "name": "per_page",
                         "in": "query"
                     }
                 ],
@@ -146,7 +150,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/PaginatedResponse"
+                            "$ref": "#/definitions/PaginatedCityMuni"
                         }
                     },
                     "400": {
@@ -164,7 +168,7 @@
                 }
             }
         },
-        "/cities/{psgcCode}": {
+        "/citi_muni/{psgc_code}": {
             "get": {
                 "description": "get string by PsgcCode",
                 "consumes": [
@@ -174,14 +178,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "cities"
+                    "Cities/Municipalities"
                 ],
-                "summary": "Show a city",
+                "summary": "Show a City/Municipality",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "City PsgcCode",
-                        "name": "psgcCode",
+                        "description": "City/Municipality PsgcCode",
+                        "name": "psgc_code",
                         "in": "path",
                         "required": true
                     }
@@ -190,7 +194,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Masterlist"
+                            "$ref": "#/definitions/CityMuni"
                         }
                     },
                     "400": {
@@ -210,7 +214,7 @@
         },
         "/masterlist": {
             "get": {
-                "description": "get masterlist",
+                "description": "get Masterlist",
                 "consumes": [
                     "application/json"
                 ],
@@ -218,27 +222,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "masterlist"
+                    "Masterlist"
                 ],
-                "summary": "Show list of masterlist",
+                "summary": "Show list of Masterlist",
                 "parameters": [
                     {
                         "type": "string",
                         "example": "filter",
-                        "description": "This is filter for all the field in the object GeographicArea",
+                        "description": "This is filter for all the field in the  object",
                         "name": "filter",
                         "in": "query"
                     },
                     {
+                        "minimum": 0,
                         "type": "integer",
                         "example": 1,
                         "name": "page",
                         "in": "query"
                     },
                     {
+                        "maximum": 1000,
                         "type": "integer",
                         "example": 1000,
-                        "name": "perPage",
+                        "name": "per_page",
                         "in": "query"
                     }
                 ],
@@ -246,7 +252,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/PaginatedResponse"
+                            "$ref": "#/definitions/PaginatedMasterlist"
                         }
                     },
                     "400": {
@@ -266,7 +272,7 @@
         },
         "/provinces": {
             "get": {
-                "description": "get provinces",
+                "description": "get Provinces",
                 "consumes": [
                     "application/json"
                 ],
@@ -274,27 +280,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "provinces"
+                    "Provinces"
                 ],
-                "summary": "Show list of provinces",
+                "summary": "Show list of Provinces",
                 "parameters": [
                     {
                         "type": "string",
                         "example": "filter",
-                        "description": "This is filter for all the field in the object GeographicArea",
+                        "description": "This is filter for all the field in the  object",
                         "name": "filter",
                         "in": "query"
                     },
                     {
+                        "minimum": 0,
                         "type": "integer",
                         "example": 1,
                         "name": "page",
                         "in": "query"
                     },
                     {
+                        "maximum": 1000,
                         "type": "integer",
                         "example": 1000,
-                        "name": "perPage",
+                        "name": "per_page",
                         "in": "query"
                     }
                 ],
@@ -302,7 +310,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/PaginatedResponse"
+                            "$ref": "#/definitions/PaginatedProvince"
                         }
                     },
                     "400": {
@@ -320,7 +328,7 @@
                 }
             }
         },
-        "/provinces/{psgcCode}": {
+        "/provinces/{psgc_code}": {
             "get": {
                 "description": "get string by PsgcCode",
                 "consumes": [
@@ -330,14 +338,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "provinces"
+                    "Provinces"
                 ],
-                "summary": "Show a province",
+                "summary": "Show a Province",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Province PsgcCode",
-                        "name": "psgcCode",
+                        "name": "psgc_code",
                         "in": "path",
                         "required": true
                     }
@@ -346,7 +354,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Masterlist"
+                            "$ref": "#/definitions/Province"
                         }
                     },
                     "400": {
@@ -366,7 +374,7 @@
         },
         "/regions": {
             "get": {
-                "description": "get regions",
+                "description": "get Regions",
                 "consumes": [
                     "application/json"
                 ],
@@ -374,27 +382,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "regions"
+                    "Regions"
                 ],
-                "summary": "Show list of regions",
+                "summary": "Show list of Regions",
                 "parameters": [
                     {
                         "type": "string",
                         "example": "filter",
-                        "description": "This is filter for all the field in the object GeographicArea",
+                        "description": "This is filter for all the field in the  object",
                         "name": "filter",
                         "in": "query"
                     },
                     {
+                        "minimum": 0,
                         "type": "integer",
                         "example": 1,
                         "name": "page",
                         "in": "query"
                     },
                     {
+                        "maximum": 1000,
                         "type": "integer",
                         "example": 1000,
-                        "name": "perPage",
+                        "name": "per_page",
                         "in": "query"
                     }
                 ],
@@ -402,7 +412,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/PaginatedResponse"
+                            "$ref": "#/definitions/PaginatedRegion"
                         }
                     },
                     "400": {
@@ -420,7 +430,7 @@
                 }
             }
         },
-        "/regions/{psgcCode}": {
+        "/regions/{psgc_code}": {
             "get": {
                 "description": "get string by PsgcCode",
                 "consumes": [
@@ -430,14 +440,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "regions"
+                    "Regions"
                 ],
-                "summary": "Show a region",
+                "summary": "Show a Region",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Region PsgcCode",
-                        "name": "psgcCode",
+                        "name": "psgc_code",
                         "in": "path",
                         "required": true
                     }
@@ -446,7 +456,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Masterlist"
+                            "$ref": "#/definitions/Region"
                         }
                     },
                     "400": {
@@ -466,13 +476,44 @@
         }
     },
     "definitions": {
+        "Barangay": {
+            "type": "object",
+            "properties": {
+                "city_muni_code": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "psgc_code": {
+                    "type": "string"
+                }
+            }
+        },
+        "CityMuni": {
+            "type": "object",
+            "properties": {
+                "level": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "prov_code": {
+                    "type": "string"
+                },
+                "psgc_code": {
+                    "type": "string"
+                }
+            }
+        },
         "Masterlist": {
             "type": "object",
             "properties": {
                 "name": {
                     "type": "string"
                 },
-                "psgcCode": {
+                "psgc_code": {
                     "type": "string"
                 }
             }
@@ -480,7 +521,7 @@
         "MetaData": {
             "type": "object",
             "properties": {
-                "itemCount": {
+                "item_count": {
                     "type": "integer",
                     "example": 1000
                 },
@@ -488,21 +529,49 @@
                     "type": "integer",
                     "example": 1
                 },
-                "perPage": {
+                "per_page": {
                     "type": "integer",
                     "example": 1000
                 },
-                "totalItems": {
+                "total_items": {
                     "type": "integer",
                     "example": 10000
                 },
-                "totalPages": {
+                "total_pages": {
                     "type": "integer",
                     "example": 10
                 }
             }
         },
-        "PaginatedResponse": {
+        "PaginatedBarangay": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Barangay"
+                    }
+                },
+                "metadata": {
+                    "$ref": "#/definitions/MetaData"
+                }
+            }
+        },
+        "PaginatedCityMuni": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/CityMuni"
+                    }
+                },
+                "metadata": {
+                    "$ref": "#/definitions/MetaData"
+                }
+            }
+        },
+        "PaginatedMasterlist": {
             "type": "object",
             "properties": {
                 "data": {
@@ -513,6 +582,59 @@
                 },
                 "metadata": {
                     "$ref": "#/definitions/MetaData"
+                }
+            }
+        },
+        "PaginatedProvince": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Province"
+                    }
+                },
+                "metadata": {
+                    "$ref": "#/definitions/MetaData"
+                }
+            }
+        },
+        "PaginatedRegion": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Region"
+                    }
+                },
+                "metadata": {
+                    "$ref": "#/definitions/MetaData"
+                }
+            }
+        },
+        "Province": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "psgc_code": {
+                    "type": "string"
+                },
+                "regCode": {
+                    "type": "string"
+                }
+            }
+        },
+        "Region": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "psgc_code": {
+                    "type": "string"
                 }
             }
         }
